Se separa js y css del index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container mt-5">
         <h1 class="text-center">Resuelve los Problemas Matemáticos</h1>
         <div id="problems" class="mt-4">
-            <!-- Problemas matemáticos se generarán aquí -->
+            <!-- Problemas se generan aquí -->
         </div>
         <button id="generate" class="btn btn-primary btn-block">Generar Nuevos Problemas</button>
         <div class="mt-3 text-center">
@@ -26,113 +26,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        let streak = 0;
-
-        function setCookie(name, value, days) {
-            const d = new Date();
-            d.setTime(d.getTime() + (days * 24 * 60 * 60 * 1000));
-            const expires = "expires=" + d.toUTCString();
-            document.cookie = name + "=" + value + ";" + expires + ";path=/";
-        }
-
-        function getCookie(name) {
-            const cname = name + "=";
-            const decodedCookie = decodeURIComponent(document.cookie);
-            const ca = decodedCookie.split(';');
-            for (let i = 0; i < ca.length; i++) {
-                let c = ca[i];
-                while (c.charAt(0) === ' ') {
-                    c = c.substring(1);
-                }
-                if (c.indexOf(cname) === 0) {
-                    return c.substring(cname.length, c.length);
-                }
-            }
-            return "";
-        }
-
-        function generateProblem() {
-            const num1 = Math.floor(Math.random() * 10) + 1;
-            const num2 = Math.floor(Math.random() * 10) + 1;
-            const operator = ['+', '-', '*', '/', '^'][Math.floor(Math.random() * 5)];
-            let problem, solution;
-            switch (operator) {
-                case '+':
-                    problem = `${num1} + ${num2}`;
-                    solution = num1 + num2;
-                    break;
-                case '-':
-                    problem = `${num1} - ${num2}`;
-                    solution = num1 - num2;
-                    break;
-                case '*':
-                    problem = `${num1} * ${num2}`;
-                    solution = num1 * num2;
-                    break;
-                case '/':
-                    problem = `${num1 * num2} / ${num1}`;
-                    solution = num2;
-                    break;
-                case '^':
-                    problem = `${num1} ^ ${num2}`;
-                    solution = Math.pow(num1, num2);
-                    break;
-            }
-            return { problem, solution };
-        }
-
-        function renderProblems() {
-            const problemsContainer = document.getElementById('problems');
-            problemsContainer.innerHTML = '';
-            for (let i = 0; i < 5; i++) {
-                const { problem, solution } = generateProblem();
-                const problemDiv = document.createElement('div');
-                problemDiv.className = 'problem';
-                problemDiv.innerHTML = `
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Problema ${i + 1}</h5>
-                            <p class="card-text">${problem}</p>
-                            <input type="number" class="form-control answer" placeholder="Tu respuesta">
-                            <button class="btn btn-success mt-2 check-answer">Comprobar</button>
-                            <p class="result mt-2"></p>
-                        </div>
-                    </div>
-                `;
-                problemDiv.querySelector('.check-answer').addEventListener('click', function() {
-                    const userAnswer = parseFloat(problemDiv.querySelector('.answer').value);
-                    const result = problemDiv.querySelector('.result');
-                    if (userAnswer === solution) {
-                        result.textContent = '¡Correcto!';
-                        result.className = 'result text-success';
-                        streak++;
-                        setCookie('streak', streak, 7);
-                        document.getElementById('streak').textContent = streak;
-                    } else {
-                        result.textContent = `Incorrecto. La respuesta correcta es ${solution}.`;
-                        result.className = 'result text-danger';
-                        streak = 0;
-                        setCookie('streak', streak, 7);
-                        document.getElementById('streak').textContent = streak;
-                        renderProblems();
-                    }
-                });
-                problemsContainer.appendChild(problemDiv);
-            }
-        }
-
-        document.getElementById('generate').addEventListener('click', renderProblems);
-
-        // Recuperar la racha de las cookies al cargar la página
-        window.onload = function() {
-            const savedStreak = getCookie('streak');
-            if (savedStreak) {
-                streak = parseInt(savedStreak);
-                document.getElementById('streak').textContent = streak;
-            }
-            renderProblems();
-        };
-    </script>
+    <script src="scripts.js"></script>
 </body>
 </html>
