--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <footer class="bg-light text-center text-lg-start mt-5">
+    <footer class="bg-light text-center text-lg-start mt-auto">
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="text-center p-3 bg-dark text-white">
-            © 2023 Charles Lettuce
+            © 2024 Charles Lettuce
         </div>
     </footer>
 
