--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="scripts.js"></script>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
+      import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-database.js";
+
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyABMS77iaYsQhsywkFhoK5BSdWri6eXw9I",
+        authDomain: "maths-f5940.firebaseapp.com",
+        projectId: "maths-f5940",
+        storageBucket: "maths-f5940.appspot.com",
+        messagingSenderId: "920913032237",
+        appId: "1:920913032237:web:abc159c81666084496b4a4",
+        measurementId: "G-ZNKKL574DW"
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const database = getDatabase(app);
+
+      // Export database for use in scripts.js
+      export { database, ref, set, get, child };
+    </script>
+    <script src="scripts.js" type="module"></script>
 </body>
 </html>
